--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,6 +28,7 @@
               %li= button_to 'Log in', new_user_session_path, class: 'btn btn-default navbar-btn', method: :get
               %li= button_to 'Sign up', new_user_registration_path, class: 'btn btn-success navbar-btn', method: :get
 
+    = render 'layouts/flash_messages'
 
     .container-fluid
       .row
