--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,7 +16,7 @@
       %td= product.price
       %td= link_to 'Show', category_product_path(product.category, product)
 
-      - if current_user && product.user == current_user
+      - if current_user && ( product.user == current_user || current_user.admin? )
         %td= link_to 'Edit', edit_category_product_path(product.category, product)
         %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
 
