--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,7 @@
     %meta{ charset: 'utf-8' }/
     %meta{ content: 'IE=Edge,chrome=1', 'http-equiv' => 'X-UA-Compatible' }/
     %meta{ content: 'width=device-width, initial-scale=1.0', name: 'viewport' }/
-    %title= AppConfig.workshops_name
+    %title= AppConfig.workshops_name.sub('Krakow', 'Kraków')
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
@@ -13,7 +13,7 @@
     %nav.navbar.navbar-default
       .container-fluid
         .navbar-header
-          %span.navbar-brand= link_to AppConfig.workshops_name, root_path
+          %span.navbar-brand= link_to AppConfig.workshops_name.sub('Krakow', 'Kraków'), root_path
 
           %button{ :type => "button", :class => "navbar-toggle", :"data-toggle" => "collapse", :"data-target" => ".navbar-collapse" }
             %span.icon-bar
