--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -35,3 +35,6 @@
       .row
         .col-lg-12
           = yield
+    %footer.footer.panel-footer
+      .container
+        %a{ href: 'http://jrachowi.cz/' } Justyna Rachowicz
