--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,19 @@
 @import "bootstrap";
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body{
+  margin-bottom: 40px;
+}
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  a:link, a:hover, a:active, a:visited{
+    text-decoration: none;
+  }
+}
