--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,7 +33,7 @@
 
     .container-fluid
       .row
-        .col-lg-12
+        .col-lg-8.col-lg-offset-2
           = yield
     %footer.footer.panel-footer
       .container
