--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,7 @@
 @import "variables";
 @import "bootstrap";
+@import "font-awesome";
+@import "categories.css";
 @import url(http://fonts.googleapis.com/css?family=Lato|Roboto+Slab);
 
 html {
@@ -24,6 +26,13 @@ body{
 }
 .navbar-right .btn{
   margin-left: 1em;
+}
+.form-horizontal{
+  max-width: 500px;
+  margin: auto;
+}
+.mid{
+  text-align: center;
 }
 .footer{
   position: absolute;
