--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,22 +1,25 @@
 %h1 Listing categories
 
-%table.table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
+%table.table.categories
 
   - categories.each do |category|
     %tr
-      %td= category.name
-      %td= link_to 'Show', category
+      %td= link_to category.name, category, class: 'category-name'
+      %td
+        - if current_user && current_user.admin?
+          = button_to category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do
+            %i.fa.fa-trash
+            Destroy
+          = button_to edit_category_path(category), class: 'btn btn-info', method: :get do
+            %i.fa.fa-pencil
+            Edit
 
-      - if current_user && current_user.admin?
-        %td= link_to 'Edit', edit_category_path(category)
-        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
-
+        = button_to category, class: 'btn btn-default', method: :get do
+          %i.fa.fa-eye
+          Show
 %br
 
 - if current_user && current_user.admin?
-  = link_to 'New Category', new_category_path
+  = button_to new_category_path, class: 'btn btn-success', method: :get do
+    %i.fa.fa-plus-circle
+    New Category
