--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,19 +1,24 @@
-= form_for [category, product] do |f|
-  - if product.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
-      %ul
-        - product.errors.full_messages.each do |msg|
-          %li= msg
+%h3.panel-heading.mid
+  .panel-title New product
+.panel-body
+  = simple_form_for [category, product], html: { class: 'form-horizontal' } do |f|
+    - if product.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
+        %ul
+          - product.errors.full_messages.each do |msg|
+            %li= msg
 
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control'
-  .form-group
-    = f.label :description
-    = f.text_area :description, class: 'form-control'
-  .form-group
-    = f.label :price
-    = f.text_field :price, class: 'form-control'
+    .form-group
+      = f.label :title
+      = f.text_field :title, class: 'form-control'
+    .form-group
+      = f.label :description
+      = f.text_area :description, class: 'form-control'
+    .form-group
+      = f.label :price
+      = f.text_field :price, class: 'form-control'
 
-  = f.submit 'Save', class: 'btn btn-default'
+    = button_tag (f.submit), class: 'btn btn-default' do
+      %i.fa.fa-plus-circle
+      Save
