--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "categories.css";
+@import "products.css";
 @import url(http://fonts.googleapis.com/css?family=Lato|Roboto+Slab);
 
 html {
@@ -33,6 +34,13 @@ body{
 }
 .mid{
   text-align: center;
+}
+h2{
+  margin-bottom: 50px;
+}
+.category-name{
+  font-size: 1.5em;
+  color: $brand-success;
 }
 .footer{
   position: absolute;
