--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -1,14 +1,20 @@
-= simple_form_for [category, product, review] do |f|
-  - if review.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(review.errors.count, "error")} prohibited this review from being saved:"
-      %ul
-        - review.errors.full_messages.each do |msg|
-          %li= msg
-  .form-group
-    = f.label :content
-    = f.text_area :content, class: 'form-control'
-  .form-group
-    = f.input :rating, collection: 1..5, class: 'form-control'
+.panel.panel-default
+  .panel-heading
+    .panel-title.mid New review
+  .panel-body
+  = simple_form_for [category, product, review], html: { class: 'form-horizontal' } do |f|
+    - if review.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(review.errors.count, "error")} prohibited this review from being saved:"
+        %ul
+          - review.errors.full_messages.each do |msg|
+            %li= msg
 
-  = f.submit 'Save', class: 'btn btn-default'
+    .form-group
+      = f.label :content
+      = f.text_area :content, class: 'form-control'
+    .form-group
+      = f.input :rating, collection: 1..5, as: :radio_buttons, class: 'form-control'
+      = button_tag (f.submit), class: 'btn btn-default' do
+        %i.fa.fa-plus-circle
+        Save
