--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,4 +1,23 @@
-%p= review.content
-%p
-  %b= review.rating
-  %em= review.author
+
+.panel.panel-default
+  .panel-heading
+    = link_to user_path(review.user) do
+      %span= review.author
+    %span
+      = time_ago_in_words(review.created_at)
+      ago
+
+  .thumbnail
+    = link_to user_path(review.user) do
+      .user-photo= gravatar_for review.user, 100
+
+  .panel-body
+    %p
+      %span
+        - review.rating.times do
+          %i.fa.fa-star
+        - (5 - review.rating).times do
+          %i.fa.fa-star-o
+    %p= review.content
+
+
