--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,27 +1,30 @@
-%p#notice= notice
-%p#error= flash[:error]
-
-%p
-  %b Title:
+%h2.mid
   = product.title
-%p
-  %b Description:
-  = product.description
-%p
-  %b Price:
-  = product.price
+.col-md-10.col-md-offset-1.products
+  %p
+    = product.description
+  %p
+    %b Price:
+    = number_to_currency(product.price)
 
-%p
-  %b Category
-  = product.category.name
+  %p
+    %b Category:
+    %br
+    %span.category-name= link_to product.category.name, category
 
-%h3 Reviews
-= render 'reviews/form'
+  - if product.reviews.any?
+    %h3.mid Reviews
 
-= render reviews
+  = render reviews
 
-- if current_user && current_user == product.user
-  = link_to 'Edit', edit_category_product_path(category.id, product.id)
-  \|
+  = render 'reviews/form'
 
-= link_to 'Back', category_products_path, class: 'btn btn-primary'
+  - if current_user && current_user == product.user
+    = button_to edit_category_product_path(category.id, product.id), class: 'btn btn-info', method: :get do
+      %i.fa.fa-pencil
+      Edit
+
+  = button_to category_path(product.category), class: 'btn btn-primary', method: :get do
+    %i.fa.fa-long-arrow-left
+    Back to
+    = product.category.name
