--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "font-awesome";
 @import "categories.css";
 @import "products.css";
+@import "users.css";
 @import url(http://fonts.googleapis.com/css?family=Lato|Roboto+Slab);
 
 html {
