--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables";
+.users{
+  .thumbnail{
+    float: left;
+    padding: 20px;
+    border: none;
+  }
+  h3{
+    margin-bottom: 30px;
+  }
+  .gravatar{
+    padding: 0 10px 10px 0;
+  }
+  .pagination{
+    margin: auto;
+    float: right;
+  }
+}
