--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,7 +15,7 @@
   - if product.reviews.any?
     %h3.mid Reviews
 
-  = render reviews
+  = render partial: 'reviews/review'
 
   = render 'reviews/form'
 
