--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
-%h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+%h2.mid Sign up
+= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f|
   = f.error_notification
   .form-inputs
     = f.input :firstname, required: true, autofocus: true
@@ -7,6 +7,6 @@
     = f.input :email, required: true
     = f.input :password, required: true
     = f.input :password_confirmation, required: true
-  .form-actions
+  .form-actions.mid
     = f.button :submit, "Sign up"
 = render "devise/shared/links"
