--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,7 +29,8 @@
               %li= button_to 'Log in', new_user_session_path, class: 'btn btn-default navbar-btn', method: :get
               %li= button_to 'Sign up', new_user_registration_path, class: 'btn btn-success navbar-btn', method: :get
 
-    = render 'layouts/flash_messages'
+    .col-lg-8.col-lg-offset-2
+      = render 'layouts/flash_messages'
 
     .container-fluid
       .row
