--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,5 +1,6 @@
 %h3.panel-heading.mid
-  .panel-title New product
+  - if current_page? category_path
+    .panel-title New product
 .panel-body
   = simple_form_for [category, product], html: { class: 'form-horizontal' } do |f|
     - if product.errors.any?
