Add products to user page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,6 +11,13 @@
   .gravatar{
     padding: 0 10px 10px 0;
   }
+  .btn-group{
+    padding: 20px 0 40px 0;
+    .btn{
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
   .pagination{
     margin: auto;
     float: right;
