--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -12,7 +12,7 @@
           %i.fa.fa-eye
           Show
 
-        - if current_user && ( product.user == current_user || current_user.admin? )
+        - if user_signed_in? && product.user == current_user
           = button_to edit_category_product_path(product.category, product), method: :get, class: 'btn btn-info' do
             %i.fa.fa-pencil
             Edit
