--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -20,8 +20,7 @@
           .pull-right= number_to_currency(product.price)
 
   - if user_signed_in?
-    .panel.panel-default
-      = render 'products/form'
+    .panel.panel-default= render 'products/form'
 
 
   - if current_user && current_user.admin?
