Minor, view-related changes, buttons and headings styling

--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -12,6 +12,6 @@
         = f.label :name
         = f.text_field :name, class: 'form-control'
 
-      = button_tag (f.submit), class: 'btn btn-default' do
+      = button_tag (f.submit), class: 'btn btn-default pull-right' do
         %i.fa.fa-plus-circle
         Save
