--- a/app/views/products/_products.haml
+++ b/app/views/products/_products.haml
@@ -1,6 +1,6 @@
 %table.table.table-striped
   %th Title
-  %th Caregory
+  %th Category
   %th Average rating
   %th Price
   = render partial: 'products/product', collection: products
