--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -5,7 +5,7 @@
     = product.description
 
   %p
-    Belongs to:
+    Added by:
     = link_to user.fullname, user_path(user)
   %p
     %b Category:
@@ -21,7 +21,7 @@
   - if user_signed_in?
     = render 'reviews/form'
 
-  - if current_user && current_user == product.user
+  - if user_signed_in? && current_user == product.user
     = button_to edit_category_product_path(category.id, product.id), class: 'btn btn-info', method: :get do
       %i.fa.fa-pencil
       Edit
