--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -20,6 +20,6 @@
 %br
 
 - if current_user && current_user.admin?
-  = button_to new_category_path, class: 'btn btn-success', method: :get do
+  = button_to new_category_path, class: 'btn btn-success pull-right', method: :get do
     %i.fa.fa-plus-circle
     New Category
