--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New category
+%h2.mid New category
 
 = render 'form'
 
-= link_to 'Back', categories_path, class: 'btn btn-primary'
+= button_to categories_path, class: 'btn btn-primary pull-right', method: :get do
+  %i.fa.fa-long-arrow-left
+  Back to all categories
