--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -22,10 +22,9 @@
   - if user_signed_in?
     .panel.panel-default= render 'products/form'
 
-
-  - if current_user && current_user.admin?
+  - if user_signed_in? && current_user.admin?
     = button_to edit_category_path(category), class: 'btn btn-info', method: :get do
-      %i.fa.fa-edit
+      %i.fa.fa-pencil
       Edit
 
   = button_to categories_path, class: 'btn btn-primary', method: :get do
